tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: with_squid_proxy
  name: with_squid_proxy
