tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/01_clamavConfigMap.yaml
apiVersion: v1
data: {}
kind: ConfigMap
metadata:
  labels:
    app: clamav-icap
    instance: with_squid_proxy
  name: clamav
  namespace: with_squid_proxy
