tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/01_deploymentWithOptionalAntiAffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    add-annotation: from_with_squid_proxy
  labels:
    add-label: from_with_squid_proxy
    app: clamav-icap
    instance: with_squid_proxy
  name: clamav-icap-strict-optional-affinity
  namespace: with_squid_proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clamav-icap
      instance: with_squid_proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        add-annotation: from_with_squid_proxy
      labels:
        add-label: from_with_squid_proxy
        app: clamav-icap
        instance: with_squid_proxy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: clamav-icap
                    instance: with_squid_proxy
                topologyKey: kubernetes.io/hostname
              weight: 50
      containers:
        - env:
            - name: TEST
              value: 'true'
          image: ghcr.io/vshn/clamav:20260929_000201
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
          name: clamav
          ports:
            - containerPort: 3310
              name: clamav
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3310
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 2000m
              memory: 4072Mi
            requests:
              cpu: 120m
              memory: 1280Mi
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
        - env:
            - name: ANOTHER_TEST
              value: 'false'
            - name: CLAMD_IP
              value: 127.0.0.1
            - name: CLAMD_MAXSIZE
              value: 50m
          image: ghcr.io/vshn/c-icap:20260919_034133
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
          name: c-icap
          ports:
            - containerPort: 1344
              name: icap
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 1344
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
