tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/02_cicapConfigMap.yaml
apiVersion: v1
data:
  CLAMD_IP: 127.0.0.1
  CLAMD_MAXSIZE: 50m
kind: ConfigMap
metadata:
  labels:
    app: clamav-icap
    instance: with_squid_proxy
  name: c-icap
  namespace: syn-icap-virusscan
