tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/02_podDisruptionBudget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app: clamav-icap
    instance: with_squid_proxy
  name: clamav-icap-strict-anti-affinity
  namespace: with_squid_proxy
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: clamav-icap
      instance: with_squid_proxy
  unhealthyPodEvictionPolicy: IfHealthyBudget
