tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/05_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clamav-icap
    instance: with_squid_proxy
  name: icap
  namespace: with_squid_proxy
spec:
  ports:
    - name: icap
      port: 80
      protocol: TCP
      targetPort: icap
  selector:
    app: clamav-icap
    instance: with_squid_proxy
  type: ClusterIP
