tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/50_squid-configmap.yaml
apiVersion: v1
data:
  ICAP_SERVICE_CONFIG: |
    icap_service service_avi_1 reqmod_precache icap://icap.with_squid_proxy.svc.cluster.local:80/squidclamav bypass=on on-overload=bypass
    adaptation_service_set avi service_avi_1
    adaptation_access avi allow all
  UPSTREAM_HOST: nginx-return-200.with_squid_proxy.svc.cluster.local
kind: ConfigMap
metadata:
  labels:
    app: squid
  name: squid-configmap
  namespace: with_squid_proxy
