tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/51_squid-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squid
  name: squid
  namespace: with_squid_proxy
spec:
  ports:
    - name: squid
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: squid
  type: ClusterIP
