tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/53_squid-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: squid-httproute
  namespace: gateway-dev-ns
spec:
  hostnames:
    - test-icap-virusscan.apps.c-hin-test-rma1.hin-infra.ch
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-dev
      namespace: gateway-dev-ns
      sectionName: http-default
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: squid
          namespace: with_squid_proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
