tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/53_squid-ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: squid-allow-gateway
  namespace: with_squid_proxy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-dev-ns
  podSelector:
    matchLabels:
      app: squid
  policyTypes:
    - Ingress
