tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/55_squid-nginx-configMap.yaml
apiVersion: v1
data:
  default.conf: |
    server {
      listen 8080;

      location / {
        return 200;
      }
    }
kind: ConfigMap
metadata:
  labels:
    app: nginx
  name: squid-nginx-configmap
  namespace: with_squid_proxy
