tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/55_squid-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: with_squid_proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        checksum/config: 0a28f6aeaa0ab83d79f8f921e669bcc8f44082fe2fcfa26bdd64f091a84570a6
      labels:
        app: nginx
    spec:
      containers:
        - image: ghcr.io/nginx/nginx-unprivileged:1.31.2-alpine3.23
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
          name: nginx
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-conf
              subPath: default.conf
      volumes:
        - configMap:
            name: squid-nginx-configmap
          name: nginx-conf
