tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/57_squid-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-return-200
  namespace: with_squid_proxy
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nginx
  type: ClusterIP
