tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/57_squid-referenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-squid-service
  namespace: with_squid_proxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-dev-ns
  to:
    - group: ''
      kind: Service
      name: squid
