tests/golden/with_squid_proxy/with_squid_proxy/with_squid_proxy/99_debug.yaml
apiVersion: v1
data:
  debug: |
    _metadata:
      multi_instance: true
      multi_tenant: true
      multi_version: true
    allowFromNamespaces:
    - matchLabels:
        kubernetes.io/metadata.name: "vshn-airlock-dev-01"
    - matchExpressions:
      - key: "env"
        operator: "In"
        values:
        - "prod"
    createNamespace: true
    debug: true
    deployments:
      clamav-icap:
        container_cicap:
          image: "ghcr.io/vshn/c-icap:20261002_114840"
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 1344
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "500m"
              memory: "500Mi"
            requests:
              cpu: "100m"
              memory: "200Mi"
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
        container_clamav:
          image: "ghcr.io/vshn/clamav:20260929_000201"
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3310
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "2000m"
              memory: "4072Mi"
            requests:
              cpu: "120m"
              memory: "1280Mi"
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
        metadata:
          annotations:
            add-annotation: "from_with_squid_proxy"
          labels:
            add-label: "from_with_squid_proxy"
        spec:
          strategy:
            rollingUpdate:
              maxSurge: 1
              maxUnavailable: 0
          template:
            metadata:
              annotations:
                add-annotation: "from_with_squid_proxy"
              labels:
                add-label: "from_with_squid_proxy"
            spec: {}
      squid:
        container_squid:
          image: "ghcr.io/bacluc/squid:2"
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 3128
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3128
            timeoutSeconds: 3
          resources:
            limits:
              memory: "400Mi"
            requests:
              cpu: "100m"
              memory: "210Mi"
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3128
            timeoutSeconds: 5
        metadata:
          annotations:
            add-annotation: "from_with_squid_proxy"
          labels:
            add-label: "from_with_squid_proxy"
        spec:
          template:
            metadata:
              annotations:
                add-annotation: "from_with_squid_proxy"
              labels:
                add-label: "from_with_squid_proxy"
            spec: {}
      squid-nginx:
        container_nginx:
          image: "ghcr.io/nginx/nginx-unprivileged:1.31.2-alpine3.23"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: "http"
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: "/"
              port: "http"
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              memory: "100Mi"
            requests:
              cpu: "50m"
              memory: "50Mi"
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: "http"
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
        metadata: {}
        spec:
          template:
            spec: {}
    enable_squid: true
    env:
      c-icap:
        ANOTHER_TEST: false
        CLAMD_IP: "127.0.0.1"
        CLAMD_MAXSIZE: "50m"
      clamav:
        TEST: true
    httproute:
      enabled: true
      gatewayClassName: "microgateway-cloudscale"
      gatewayName: "gateway-dev"
      gatewayNamespace: "gateway-dev-ns"
      sectionName: "http-default"
    images:
      cicap:
        registry: "ghcr.io"
        repository: "vshn/c-icap"
        tag: "20261002_114840"
      clamav:
        registry: "ghcr.io"
        repository: "vshn/clamav"
        tag: "20260929_000201"
      nginx:
        registry: "ghcr.io"
        repository: "nginx/nginx-unprivileged"
        tag: "1.31.2-alpine3.23"
      squid:
        registry: "ghcr.io"
        repository: "bacluc/squid"
        tag: "2"
    minAvailable: 1
    monitoring:
      enabled: false
      prometheusRuleSpec: {}
    namespace: "with_squid_proxy"
    namespaceAnnotations: {}
    namespaceLabels: {}
    replicas: 2
    replicasWithOptionalAntiAffinity: 3
    squid_domain: "test-icap-virusscan.apps.c-hin-test-rma1.hin-infra.ch"
kind: ConfigMap
metadata:
  name: debug-configmap
  namespace: with_squid_proxy
